--- a/src/components/ColorPicker/ColorPicker.css
+++ b/src/components/ColorPicker/ColorPicker.css
@@ -29,7 +29,7 @@
   position: relative;
   top: 0;
 
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   text-transform: uppercase;
   border-radius: 10px;
 
