--- a/src/components/TodoList/TodoList.css
+++ b/src/components/TodoList/TodoList.css
@@ -24,16 +24,17 @@
 .item {
   position: relative;
   display: flex;
+
   width: 100%;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   min-height: 40px;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   text-transform: uppercase;
 
   text-align: center;
 
-  padding: 0.5rem;
+  padding: 1rem;
 
   border-radius: 10px;
   top: 0;
@@ -41,6 +42,9 @@
 
   box-shadow: 0.3em 0.3em rgba(0.4, 0.4, 0.4, 0.4);
   background-color: aqua;
+}
+.item p {
+  width: 100%;
 }
 .item button {
   position: absolute;
@@ -63,4 +67,8 @@
 }
 .todoList h3 {
   font-size: 32px;
+}
+
+.item input:checked + p {
+  text-decoration: line-through;
 }
