--- a/src/components/Form/Checkbox.css
+++ b/src/components/Form/Checkbox.css
@@ -12,7 +12,7 @@
   background: linear-gradient(to right, #ffffff, #ffefba);
   width: 100%;
   height: 30vw;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 13px;
 }
 
@@ -69,15 +69,16 @@
   border: 2px solid #e9a1ff;
 }
 
-.container button {
+.buy {
   width: 50%;
   height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background: green;
+  background: rgb(8, 238, 203);
   border-radius: 10px;
   font-size: 24px;
+  opacity: 1;
 }
 .container button:disabled {
   opacity: 0.5;
