--- a/src/components/Form/Checkbox.css
+++ b/src/components/Form/Checkbox.css
@@ -79,7 +79,9 @@
   border-radius: 10px;
   font-size: 24px;
   opacity: 1;
+  color: white;
 }
 .container button:disabled {
   opacity: 0.5;
+  color: gray;
 }
