--- a/src/components/TodoEditor/TodoEditor.css
+++ b/src/components/TodoEditor/TodoEditor.css
@@ -17,7 +17,7 @@
   border: 1px solid rgba(199, 8, 173, 0.2);
   border-radius: 4px;
 
-  font: inherit;
+  font-size: 24px;
 
   letter-spacing: 0.01em;
 
