--- a/src/components/TodoList/TodoList.css
+++ b/src/components/TodoList/TodoList.css
@@ -6,13 +6,12 @@
   justify-content: space-around;
   align-items: center;
 
-  border: 2px solid red;
   font-size: 1rem;
   color: purple;
-  background-color: yellow;
-  border: 1px solid rgba(199, 8, 173, 0.2);
-  box-shadow: 0.3em 0.3em 0.3em 0.3em rgba(0.4, 0.4, 0.4, 0.4);
+  background-color: wheat;
+  box-shadow: 0.3em 0.3em rgba(0.4, 0.4, 0.4, 0.4);
   border-radius: 10px;
+  padding: 20px;
 }
 
 .todoList ul {
