--- a/src/components/TodoList/TodoList.css
+++ b/src/components/TodoList/TodoList.css
@@ -3,7 +3,7 @@
 
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  gap: 30px;
   align-items: center;
 
   font-size: 1rem;
