--- a/src/components/Dropdown/Dropdown.css
+++ b/src/components/Dropdown/Dropdown.css
@@ -21,9 +21,9 @@
 
 .Dropdown__menu {
   width: 100%;
-  position: absolute;
+  /* position: absolute;
   top: 101%;
-  left: 0;
+  left: 0; */
   border: 2px solid blueviolet;
 
   padding: 20px;
