--- a/src/components/TodoList/TodoList.css
+++ b/src/components/TodoList/TodoList.css
@@ -22,7 +22,8 @@
   gap: 20px;
   align-items: center;
   justify-content: center;
-  box-shadow: 0.3em 0.3em 0.3em 0.3em rgba(0.4, 0.4, 0.4, 0.4);
+  box-shadow: 0.3em 0.3em 0.3em 0.3em
+    rgba(0.4, 0.4, 0.4, 0.4);
   border-radius: 10px;
 }
 .item {
@@ -32,7 +33,6 @@
 .item label {
   display: flex;
 
-  width: 100%;
   align-items: center;
   justify-content: space-between;
   min-height: 40px;
