add fetch news component

--- a/src/components/TodoEditor/TodoEditor.css
+++ b/src/components/TodoEditor/TodoEditor.css
@@ -33,7 +33,7 @@
   border-radius: 10px;
   padding: 12px 24px;
   background-color: aqua;
-  color: purple;
+  color: aliceblue;
   font-weight: 800;
   text-transform: uppercase;
 }
